--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "formik": "^2.4.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
     "yup": "^1.3.3"
   },
